# ugsys-projects-registry

./: .gitignore  Dockerfile  Dockerfile.lambda  README.md  devbox.json  handler.py  justfile  pyproject.toml
.github/workflows/: ci-frontend.yml  ci.yml  codeql.yml  deploy-frontend.yml  deploy.yml  security-scan.yml
.kiro/hooks/: test-after-write.kiro.hook
.kiro/specs/black-page-registry/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/cors-preflight-fix/: bugfix.md  design.md  tasks.md
.kiro/specs/data-migration-projects/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/projects-registry/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/registry-dashboard-layout/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/registry-frontend-replication/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/registry-plugin-manifest/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/web-frontend-quality/: .config.kiro  design.md  requirements.md  tasks.md
.zap/: rules.tsv
api/: .envrc  conftest.py  devbox.json  justfile  pyproject.toml
api/scripts/: install-hooks.sh
api/scripts/hooks/: pre-commit
scripts/: migrate_from_registry.py  migrate_projects_v2_to_ugsys.py
scripts/hooks/: pre-commit
src/: config.py  main.py
src/application/: tracing.py
src/application/commands/: form_commands.py  project_commands.py  public_commands.py  subscription_commands.py
src/application/dtos/: admin_dtos.py  form_dtos.py  image_dtos.py  project_dtos.py  public_dtos.py  subscription_dtos.py
src/application/queries/: project_queries.py  subscription_queries.py
src/application/services/: admin_service.py  event_consumer_service.py  form_service.py  image_service.py  project_service.py  public_service.py  subscription_service.py
src/domain/: exceptions.py
src/domain/entities/: form_schema.py  form_submission.py  project.py  subscription.py
src/domain/queries/: project_queries.py
src/domain/repositories/: circuit_breaker.py  event_publisher.py  form_submission_repository.py  identity_client.py  project_repository.py  s3_client.py  subscription_repository.py
src/domain/value_objects/: project_status.py
src/infrastructure/: logging.py  tracing.py
src/infrastructure/adapters/: identity_manager_client.py  in_memory_circuit_breaker.py  s2s_token_provider.py  s3_client.py
src/infrastructure/messaging/: event_publisher.py
src/infrastructure/persistence/: dynamodb_form_submission_repository.py  dynamodb_project_repository.py  dynamodb_subscription_repository.py
src/presentation/: auth.py  dependencies.py  envelope.py  event_consumer.py
src/presentation/api/v1/: admin.py  form_submissions.py  health.py  images.py  plugin_manifest.py  projects.py  public.py  subscriptions.py
src/presentation/middleware/: correlation_id.py  exception_handler.py  rate_limiting.py  security_headers.py  xray_middleware.py
tests/integration/: test_dynamodb_form_submission_repository.py  test_dynamodb_project_repository.py  test_dynamodb_subscription_repository.py  test_middleware_stack.py
tests/property/scripts/: test_pbt_migrate_projects.py
tests/unit/: test_pbt_circuit_breaker.py  test_pbt_form_schema.py  test_pbt_input_length.py  test_pbt_participant_count.py  test_pbt_public_subscribe.py  test_pbt_subscription_uniqueness.py
tests/unit/application/: test_admin_service.py  test_event_consumer_service.py  test_form_service.py  test_image_service.py  test_project_service.py  test_public_service.py  test_subscription_service.py
tests/unit/domain/: test_exceptions.py  test_form_schema.py  test_form_submission.py  test_project.py  test_project_status.py  test_subscription.py
tests/unit/infrastructure/: test_event_publisher.py  test_identity_manager_client.py  test_in_memory_circuit_breaker.py  test_logging.py  test_s2s_token_provider.py  test_tracing.py
tests/unit/presentation/: test_auth_algorithm.py  test_cors_preflight.py  test_middleware.py  test_plugin_manifest.py  test_projects_router.py  test_subscriptions_router.py
tests/unit/scripts/: test_migrate_projects_v2_to_ugsys.py
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/app/: App.tsx  providers.tsx  router.tsx
web/src/app/__tests__/: router.bug.test.tsx  router.preservation.test.tsx
web/src/components/auth/: ForgotPasswordModal.tsx  LoginForm.tsx  RegisterForm.tsx
web/src/components/dashboard/: PasswordChange.tsx  ProfileSection.tsx  SubscriptionList.tsx
web/src/components/forms/: DynamicFormRenderer.tsx
web/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.test.tsx  Navbar.tsx  UserMenu.test.tsx  UserMenu.tsx
web/src/components/layout/__tests__/: Layout.preservation.test.tsx  ThemeWiring.test.tsx
web/src/components/projects/: ProjectCard.tsx  ProjectCompact.tsx  ProjectGrid.tsx  ProjectList.tsx  ViewToggle.tsx
web/src/components/subscriptions/: PublicSubscribeForm.tsx  SubscriptionForm.tsx
web/src/components/ui/: Button.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  Modal.tsx  Pagination.tsx  ToastContainer.tsx
web/src/hooks/: useAuth.ts  useFocusManagement.test.ts  useFocusManagement.ts  usePagination.ts  useProjectDetail.test.ts  useProjectDetail.ts  useProjects.test.ts  useProjects.ts  useProtectedRoute.ts  usePublicSubscribe.test.ts  usePublicSubscribe.ts
web/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  SubscribePage.tsx
web/src/services/: authService.ts  formApi.ts  httpClient.test.ts  httpClient.ts  ports.ts  projectApi.ts  subscriptionApi.ts
web/src/stores/: authStore.test.ts  authStore.ts  toastStore.ts
web/src/types/: api.ts  auth.ts  form.ts  project.ts
web/src/utils/: dateUtils.ts  errorHandling.test.ts  errorHandling.ts  logger.test.ts  logger.ts  sanitize.test.ts  sanitize.ts
