[project]
name = "ugsys-projects-registry"
version = "0.1.0"
description = "Project catalog and volunteer subscription management service for the ugsys platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "aioboto3>=13.0",
    "httpx>=0.27",
    "mangum>=0.17",
    "python-ulid>=3.0",
    "structlog>=24.1",
    "ugsys-auth-client",
    "ugsys-logging-lib",
    "ugsys-event-lib",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "moto[dynamodb,events,s3]>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[dynamodb,events,s3]>=1.34",
    "bandit[toml]>=1.7",
    "safety>=3.2",
]

[tool.uv.sources]
ugsys-auth-client = { git = "https://github.com/awscbba/ugsys-shared-libs", tag = "auth-client/v0.1.0", subdirectory = "auth-client" }
ugsys-logging-lib = { git = "https://github.com/awscbba/ugsys-shared-libs", tag = "logging-lib/v0.1.0", subdirectory = "logging-lib" }
ugsys-event-lib   = { git = "https://github.com/awscbba/ugsys-shared-libs", tag = "event-lib/v0.1.0", subdirectory = "event-lib" }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "ANN", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ANN"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "src/infrastructure/persistence/*",
    "src/infrastructure/logging.py",
    "src/infrastructure/adapters/*",
    "src/infrastructure/messaging/*",
    "src/presentation/api/v1/*.py",
    "src/presentation/event_consumer.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mangum.*", "aioboto3.*", "moto.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
